<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <!-- Surname -->
    <TextView
        android:id="@+id/tvAddContactLabelSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlaceholderSurname"
        android:textSize="25dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/etAddContactSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@id/tvAddContactLabelSurname" />

    <!-- Name -->
    <TextView
        android:id="@+id/tvAddContactLabelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlaceholderName"
        android:textSize="25dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/etAddContactSurname"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/etAddContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/tvAddContactLabelName"/>

    <!-- Company -->
    <TextView
        android:id="@+id/tvAddContactLabelCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlaceholderCompany"
        android:textSize="25dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/etAddContactName"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/etAddContactCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/tvAddContactLabelCompany"/>

    <!-- Address -->
    <TextView
        android:id="@+id/tvAddContactLabelAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlaceholderAddress"
        android:textSize="25dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/etAddContactCompany"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/etAddContactAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/tvAddContactLabelAddress"/>

    <!-- Phone -->
    <TextView
        android:id="@+id/tvAddContactLabelPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlaceholderPhone"
        android:textSize="25dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/etAddContactAddress"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/etAddContactPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/tvAddContactLabelPhone"/>

    <!-- Mail -->
    <TextView
        android:id="@+id/tvAddContactLabelMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlaceholderMail"
        android:textSize="25dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/etAddContactPhone"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/etAddContactMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/tvAddContactLabelMail"/>

    <TextView
        android:id="@+id/tvAddContactLabelSector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPlaceholderSector"
        android:textSize="20dp"
        android:textColor="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/etAddContactMail"
        android:layout_marginTop="50dp"
        />

    <!-- Sector -->
    <Spinner
        android:id="@+id/spAddContactSector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintTop_toTopOf="@+id/tvAddContactLabelSector"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/btnAddContactConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toTopOf="@+id/spAddContactSector"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/btnAddContactCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintTop_toTopOf="@+id/spAddContactSector"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>